[package]
name = "budgeteer"
version = "1.1.0"
edition = "2021"
description = "Envelope system budgeting CLI app"
readme = "README.md"
repository = "https://github.com/mobusoperandi/budgeteer"
license = "MIT"
keywords = ["budgeting", "cli"]
categories = ["command-line-utilities"]
include = [
    "README.md",
    "src/**/*",
    "tests/**/*"
]

[dependencies]
ansitok = "0.1.0"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "3.2.18", features = ["derive"] }
cli-table = "0.4.7"
derive_more = "0.99.17"
itertools = "0.10.3"
readext = "0.1.0"
ron = "0.8.0"
rust_decimal = "1.26.1"
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.37"

[dev-dependencies]
bytes = "1.2.1"
cargo-edit = "0.9.1"
cargo-llvm-cov = "0.5.0"
cargo-make = "0.35.13"
conventional_commits_linter = "0.12.1"
markdown-toc = "0.2.0"
proptest = "1.0.0"
proptest-derive = "0.3.0"
sd = "0.7.6"
semantic-release-rust = "1.0.0-alpha.8"
tempfile = "3.3.0"
trycmd = "0.13.6"
